corrected all file